# rdxl_static_macros

./: Cargo.toml  README.md
src/: dot.rs  dot_html.rs  dot_include.rs  dot_template.rs  lib.rs
tests/: dot.rs  dot_include.rs  index.rs  template.rs  www.rs
tests/post/: entry1.html
tests/static_files/: lib.rs
