[package]
name = "rdxl_static_macros"
version = "0.0.6"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT OR Apache-2.0"
description = "Macros for RDXL Static Site Generation"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/rdxl_static_macros"
keywords = ["static","site","generation","macros"]

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11"
rdxl_internals = "0.0.7"
quote = "1.0"
proc-macro2 = { version="1.0", features=["span-locations"] }

[dependencies.syn]
version = "1.0"
features = ["full"]
